--- a/components/assistive-webdriver/package.json
+++ b/components/assistive-webdriver/package.json
@@ -78,21 +78,22 @@
     "rollup": "2.33.1",
     "selenium-webdriver": "4.0.0-alpha.7",
     "ts-jest": "25.5.1",
+    "tslib": "2.0.3",
     "typescript": "4.0.5"
   },
   "peerDependencies": {
     "selenium-webdriver": "*"
   },
   "scripts": {
-    "prepare": "yarn build",
+    "prepare": "pnpm build",
     "prebuild": "rimraf dist",
-    "build": "yarn build:schema && yarn build:rollup",
+    "build": "pnpm build:schema && pnpm build:rollup",
     "build:schema": "json2ts -i config-schema.json -o src/server/config.d.ts",
     "build:rollup": "rollup -c",
     "postbuild": "tsc -p tsconfig.d.json",
     "format": "prettier '*.{ts,js,json}' '{src,server,test,samples}/**/*.{ts,js,json}'",
-    "format:check": "npm run format -- --check",
-    "format:fix": "npm run format -- --write",
+    "format:check": "pnpm format -- --check",
+    "format:fix": "pnpm format -- --write",
     "lint": "eslint '{src,server,test,samples}/**/*.{ts,js,json}'",
     "start": "node dist/server/bin.js",
     "test": "jest",
