--- a/components/assistive-webdriver/package.json
+++ b/components/assistive-webdriver/package.json
@@ -51,6 +51,7 @@
     "@babel/core": "7.12.3",
     "@babel/plugin-syntax-typescript": "7.12.1",
     "@rollup/plugin-typescript": "6.1.0",
+    "@sinonjs/fake-timers": "6.0.0",
     "@types/co-body": "5.1.0",
     "@types/http-proxy": "1.17.4",
     "@types/jest": "26.0.15",
@@ -67,7 +68,6 @@
     "babel-plugin-istanbul": "6.0.0",
     "jest": "26.6.3",
     "json-schema-to-typescript": "9.1.1",
-    "lolex": "6.0.0",
     "nyc": "15.1.0",
     "rimraf": "3.0.2",
     "rollup": "2.33.1",
