Extracting "vm-providers" component and making "text-to-socket-engine" an npm component

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+.nyc_output
+dist
 node_modules
+coverage
+*.tgz
+/components/assistive-webdriver/src/server/config.ts
+/components/assistive-webdriver/config-schema.json
+/components/vm-providers/src/config.ts
