--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,86 +6,6 @@ on:
   pull_request:
     branches: [master]
 jobs:
-  build-assistive-webdriver:
-    runs-on: ubuntu-latest
-    steps:
-      - name: "GitHub variables"
-        run: echo "github.event_name = ${{ github.event_name }}, github.ref = ${{ github.ref }}"
-      - uses: actions/checkout@v2
-      - name: Set Node.js version
-        uses: actions/setup-node@v1
-        with:
-          node-version: "12.x"
-      - uses: actions/cache@v2
-        with:
-          path: "~/.pnpm-store"
-          key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            pnpm-
-      - run: |
-          curl -L https://unpkg.com/@pnpm/self-installer | node
-          pnpm config set store-dir ~/.pnpm-store
-      - run: pnpm install --frozen-lockfile
-        working-directory: ./components/assistive-webdriver
-      - run: pnpm lint
-      - run: pnpm format:check
-      - run: pnpm test -- --coverage
-        working-directory: ./components/assistive-webdriver
-      - uses: codecov/codecov-action@v1
-        with:
-          file: ./components/assistive-webdriver/coverage/lcov.info
-          name: assistive-webdriver
-          flags: assistivewebdriver
-      - run: pnpm pack && mv assistive-webdriver-0.0.0.tgz assistive-webdriver.tgz
-        working-directory: ./components/assistive-webdriver
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: assistive-webdriver.tgz
-          path: ./components/assistive-webdriver/assistive-webdriver.tgz
-      - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/assistive-webdriver/')
-        name: pnpm publish
-        run: |
-          pnpm version --no-git-tag-version --new-version $(basename ${{ github.ref }})
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-          pnpm publish
-        working-directory: ./components/assistive-webdriver
-  build-tcp-web-listener:
-    runs-on: ubuntu-latest
-    steps:
-      - name: "GitHub variables"
-        run: echo "github.event_name = ${{ github.event_name }}, github.ref = ${{ github.ref }}"
-      - uses: actions/checkout@v2
-      - name: Set Node.js version
-        uses: actions/setup-node@v1
-        with:
-          node-version: "12.x"
-      - uses: actions/cache@v2
-        with:
-          path: "~/.pnpm-store"
-          key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            pnpm-
-      - run: |
-          curl -L https://unpkg.com/@pnpm/self-installer | node
-          pnpm config set store-dir ~/.pnpm-store
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm test
-        working-directory: ./components/tcp-web-listener
-      - run: pnpm pack && mv tcp-web-listener-0.0.0.tgz tcp-web-listener.tgz
-        working-directory: ./components/tcp-web-listener
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: tcp-web-listener.tgz
-          path: components/tcp-web-listener/tcp-web-listener.tgz
-      - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/tcp-web-listener/')
-        name: pnpm publish
-        run: |
-          pnpm version --no-git-tag-version --new-version $(basename ${{ github.ref }})
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-          pnpm publish
-        working-directory: ./components/tcp-web-listener
   build-text-to-socket-engine:
     runs-on: windows-2019
     strategy:
@@ -97,72 +17,45 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "12.x"
-      - run: node setVersion.js ${{ github.ref }}
+      - run: node setVersion.js
         working-directory: .\components\text-to-socket-engine
       - run: |
           @echo on
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=${{ matrix.arch }}
           call build.cmd
+          move TextToSocketEngine.dll TextToSocketEngine-${{ matrix.arch }}.dll
         shell: cmd
-        working-directory: .\components\text-to-socket-engine
-      - run: 7z a text-to-socket-engine-${{ matrix.arch }}.zip register.cmd unregister.cmd TextToSocketEngine.dll
         working-directory: .\components\text-to-socket-engine
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: text-to-socket-engine-${{ matrix.arch }}.zip
-          path: components/text-to-socket-engine/text-to-socket-engine-${{ matrix.arch }}.zip
-  release-text-to-socket-engine:
-    runs-on: ubuntu-latest
-    needs: build-text-to-socket-engine
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/text-to-socket-engine/')
-    steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: text-to-socket-engine-x86.zip
-      - uses: actions/download-artifact@v2
-        with:
-          name: text-to-socket-engine-amd64.zip
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: true
-          prerelease: false
-      - name: Upload text-to-socket-engine-x86.zip
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./text-to-socket-engine-x86.zip
-          asset_name: text-to-socket-engine-x86.zip
-          asset_content_type: application/zip
-      - name: Upload text-to-socket-engine-amd64.zip
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./text-to-socket-engine-amd64.zip
-          asset_name: text-to-socket-engine-amd64.zip
-          asset_content_type: application/zip
-  test-e2e:
+          name: text-to-socket-engine-${{ matrix.arch }}
+          path: components/text-to-socket-engine/TextToSocketEngine-${{ matrix.arch }}.dll
+  build-js:
     runs-on: macos-latest
     needs:
-      - build-assistive-webdriver
-      - build-tcp-web-listener
       - build-text-to-socket-engine
+    strategy:
+      matrix:
+        ENABLE_COVERAGE: ["0", "1"]
+    env:
+      ENABLE_COVERAGE: "${{ matrix.ENABLE_COVERAGE }}"
     steps:
+      - name: "GitHub variables"
+        run: echo "github.event_name = ${{ github.event_name }}, github.ref = ${{ github.ref }}"
       - uses: actions/checkout@v2
       - name: Set Node.js version
         uses: actions/setup-node@v1
         with:
           node-version: "12.x"
+      - uses: actions/download-artifact@v2
+        with:
+          name: text-to-socket-engine-x86
+          path: components/text-to-socket-engine
+      - uses: actions/download-artifact@v2
+        with:
+          name: text-to-socket-engine-amd64
+          path: components/text-to-socket-engine
       - uses: actions/cache@v2
         with:
           path: "~/.pnpm-store"
@@ -173,20 +66,10 @@ jobs:
           curl -L https://unpkg.com/@pnpm/self-installer | node
           pnpm config set store-dir ~/.pnpm-store
       - run: pnpm install --frozen-lockfile
-        env:
-          ENABLE_COVERAGE: "1"
-      - uses: actions/download-artifact@v2
-        with:
-          name: tcp-web-listener.tgz
-          path: ./vagrant/win10-chromium-nvda/software/
-      - uses: actions/download-artifact@v2
-        with:
-          name: text-to-socket-engine-x86.zip
-          path: ./vagrant/win10-chromium-nvda/software/
-      - run: |
-          touch software/.tcp-web-listener.tgz
-          touch software/.text-to-socket-engine-x86.zip
-          ./download.sh
+      - run: pnpm lint
+      - run: pnpm format:check
+      - run: pnpm test -r
+      - run: ./download.sh
         continue-on-error: true
         name: "Download software (1)"
         working-directory: ./vagrant/win10-chromium-nvda
@@ -223,25 +106,21 @@ jobs:
         timeout-minutes: 45
       - run: vboxwebsrv -v -A null --logfile vboxwebsrv.log &
       - run: |
-          pnpm nyc-server -- -l debug -c ../../vagrant/win10-chromium-nvda/vm-config.json --pid-file ../../assistive-webdriver.pid &> ../../assistive-webdriver.log &
+          pnpm nyc-awd-server -- -l debug -c ./vagrant/win10-chromium-nvda/vm-config.json --pid-file assistive-webdriver.pid &> assistive-webdriver.log &
           while ! nc -z 127.0.0.1 3000; do sleep 1; done
         name: "Start assistive-webdriver server"
-        working-directory: ./components/assistive-webdriver
       - name: "test (1)"
         id: test1
-        run: pnpm nyc-tester -- -m nvda -k Insert -l debug
-        working-directory: ./components/assistive-webdriver
+        run: pnpm nyc-awd-tester -- -m nvda -k Insert -l debug
         continue-on-error: true
       - name: "test (2)"
         id: test2
         if: steps.test1.outcome == 'failure'
-        run: pnpm nyc-tester -- -m nvda -k Insert -l debug
-        working-directory: ./components/assistive-webdriver
+        run: pnpm nyc-awd-tester -- -m nvda -k Insert -l debug
         continue-on-error: true
       - name: "test (3)"
         if: steps.test2.outcome == 'failure'
-        run: pnpm nyc-tester -- -m nvda -k Insert -l debug
-        working-directory: ./components/assistive-webdriver
+        run: pnpm nyc-awd-tester -- -m nvda -k Insert -l debug
       - run: |
           ASSISTIVE_WEBDRIVER_PID=$(cat ./assistive-webdriver.pid)
           echo "Sending SIGINT to $ASSISTIVE_WEBDRIVER_PID"
@@ -255,14 +134,32 @@ jobs:
       - run: cat vboxwebsrv.log
         if: ${{ always() }}
       - run: pnpm nyc-report
-        working-directory: ./components/assistive-webdriver
+        if: matrix.ENABLE_COVERAGE == '1'
       - uses: codecov/codecov-action@v1
         with:
           file: ./components/assistive-webdriver/coverage/lcov.info
+          name: assistive-webdriver
+          flags: assistivewebdriver
+        if: matrix.ENABLE_COVERAGE == '1' && always()
+      - uses: codecov/codecov-action@v1
+        with:
+          file: ./components/vm-providers/coverage/lcov.info
+          name: vm-providers
+          flags: vmproviders
+        if: matrix.ENABLE_COVERAGE == '1' && always()
+      - uses: codecov/codecov-action@v1
+        with:
+          file: ./coverage/lcov.info
           name: e2e
           flags: e2e
+        if: matrix.ENABLE_COVERAGE == '1' && always()
+      - if: matrix.ENABLE_COVERAGE == '0' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/')
+        name: pnpm publish
+        run: |
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+          pnpm -r publish
       - name: "Upload VM"
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/vagrant-win10-chromium-nvda/')
+        if: matrix.ENABLE_COVERAGE == '0' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/')
         run: |
           ./packageVM.sh
           vagrant cloud auth login --token "${{ secrets.VAGRANT_TOKEN }}"
