--- a/vagrant/win10-chromium-nvda/Vagrantfile
+++ b/vagrant/win10-chromium-nvda/Vagrantfile
@@ -56,18 +56,16 @@ Vagrant.configure("2") do |config|
       Expand-Archive -Path C:\\vagrant\\software\\node.zip -DestinationPath C:\\
   SHELL
 
+  config.vm.provision "npm",
+  type: "shell",
+  inline: <<-SHELL
+    c:\\node-v12.16.3-win-x64\\npm.cmd install --scripts-prepend-node-path=true -g c:\\vagrant\\win10-chromium-nvda-vm-0.0.0.tgz
+  SHELL
+
   config.vm.provision "text-to-socket-engine",
   type: "shell",
   inline: <<-SHELL
-    Expand-Archive -Path C:\\vagrant\\software\\text-to-socket-engine-x86.zip -DestinationPath C:\\text-to-socket-engine\\
-    c:\\windows\\system32\\regsvr32.exe /s C:\\text-to-socket-engine\\TextToSocketEngine.dll
-    c:\\windows\\system32\\rundll32.exe C:\\text-to-socket-engine\\TextToSocketEngine.dll,addVoice textToSocketVoice "Text To Socket 127.0.0.1:4449" 127.0.0.1 4449
-  SHELL
-
-  config.vm.provision "tcp-web-listener",
-  type: "shell",
-  inline: <<-SHELL
-      c:\\node-v12.16.3-win-x64\\npm.cmd install --scripts-prepend-node-path=true -g file:///c:/vagrant/software/tcp-web-listener.tgz
+    c:\\node-v12.16.3-win-x64\\node_modules\\win10-chromium-nvda-vm\\node_modules\\.bin\\text-to-socket-engine-register.cmd
   SHELL
 
   config.vm.provision "start-cmd", type: "file", source: "start.cmd", destination: "C:\\start.cmd"
@@ -80,7 +78,7 @@ Vagrant.configure("2") do |config|
       netsh advfirewall firewall add rule name="Allow selenium" localport=4444 protocol=tcp dir=in action=allow
       netsh advfirewall firewall add rule name="Allow tcp-web-listener" localport=7779 protocol=tcp dir=in action=allow
       \$curPath = Get-ItemPropertyValue -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH
-      Set-ItemProperty -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH -Type ExpandString -Value "\$curPath;c:\\chromedriver_win32;c:\\chrome-win"
+      Set-ItemProperty -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH -Type ExpandString -Value "\$curPath;c:\\node-v12.16.3-win-x64;c:\\chromedriver_win32;c:\\chrome-win"
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Run' -Name StartCmd -Type String -Value 'c:\\start.cmd'
   SHELL
 
