Adding missing metadata in package.json of text-to-socket-engine

--- a/components/text-to-socket-engine/package.json
+++ b/components/text-to-socket-engine/package.json
@@ -1,6 +1,16 @@
 {
   "name": "text-to-socket-engine",
   "version": "0.0.2",
+  "description": "TextToSocketEngine is an implementation of the Windows Speech API Text-To-Speech engine interface that simply redirects all the text it receives to a configured TCP socket, instead of converting the text to speech (as regular TTS engines do).",
+  "author": "David-Emmanuel Divernois <david-emmanuel.divernois@amadeus.com>",
+  "homepage": "https://github.com/AmadeusITGroup/Assistive-Webdriver",
+  "bugs": "https://github.com/AmadeusITGroup/Assistive-Webdriver/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AmadeusITGroup/Assistive-Webdriver.git",
+    "directory": "components/text-to-socket-engine"
+  },
+  "license": "MIT",
   "files": [
     "TextToSocketEngine*.dll",
     "register.cmd",
