--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Update dependencies
+name: update
 
 on:
   schedule:
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: curl -L https://unpkg.com/@pnpm/self-installer | node
       - run: pnpm update -r --latest -E
       - name: Create pull request
         uses: peter-evans/create-pull-request@v3.8.0
