--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: curl -L https://unpkg.com/@pnpm/self-installer | node
+      - run: npm i -g pnpm
       - run: pnpm update -r --latest -E
       - name: Create pull request
         uses: peter-evans/create-pull-request@v3.8.0
