Setting node.js version in update workflow

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set Node.js version
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
       - run: npm i -g pnpm
       - run: pnpm update -r --latest -E
       - name: Create pull request
