--- a/components/assistive-webdriver/package.json
+++ b/components/assistive-webdriver/package.json
@@ -66,7 +66,7 @@
     "pngjs": "6.0.0",
     "rimraf": "3.0.2",
     "rollup": "2.39.0",
-    "selenium-webdriver": "4.0.0-alpha.8",
+    "selenium-webdriver": "4.0.0-beta.1",
     "tslib": "2.1.0",
     "typescript": "4.1.5"
   },
