Moving typescript config options from rollup.config.js to tsconfig.json

--- a/components/assistive-webdriver/tsconfig.json
+++ b/components/assistive-webdriver/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "noEmitOnError": true,
-    "module": "commonjs",
+    "target": "ES2017",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
