--- a/components/vm-providers/tsconfig.json
+++ b/components/vm-providers/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "noEmitOnError": true,
-    "module": "commonjs",
+    "target": "ES2017",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
