--- a/vagrant/win10-chromium-nvda/Vagrantfile
+++ b/vagrant/win10-chromium-nvda/Vagrantfile
@@ -20,8 +20,14 @@ Vagrant.configure("2") do |config|
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows NT\\CurrentVersion\\Winlogon' -Name DefaultUserName -Type String -Value IEUser
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows NT\\CurrentVersion\\Winlogon' -Name DefaultPassword -Type String -Value 'Passw0rd!'
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows NT\\CurrentVersion\\Winlogon' -Name AutoAdminLogon -Type String -Value 1
+      # disable windows update:
       New-Item -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\WindowsUpdate' -Name AU -Force
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\WindowsUpdate\\AU' -Name NoAutoUpdate -Type DWord -Value 1
+      Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\WindowsUpdate\\AU' -Name AUOptions -Type DWord -Value 1
+      Set-Service -Name wuauserv -StartupType Disabled
+      # disable notification center:
+      New-Item -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows' -Name Explorer -Force
+      Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\Explorer' -Name DisableNotificationCenter -Type DWord -Value 1
       # disable ipv6:
       Set-ItemProperty -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Services\\Tcpip6\\Parameters' -Name DisabledComponents -Type DWord -Value 0xFF
       # allows the mouse to move just after typing:
