Do not upgrade rollup for assistive-playwright-server

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -18,6 +18,8 @@ jobs:
       - run: pnpm update -r --latest -E
       - run: pnpm install p-queue@6.6.2
         working-directory: ./components/assistive-webdriver
+      - run: pnpm install rollup@2.52.2
+        working-directory: ./components/assistive-playwright-server
       - name: Create pull request
         uses: peter-evans/create-pull-request@v3.8.0
         with:
