--- a/components/vm-providers/package.json
+++ b/components/vm-providers/package.json
@@ -23,7 +23,9 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@zxing/library": "0.18.6",
     "pngjs": "6.0.0",
+    "qrcode": "1.4.4",
     "stream-json": "1.7.2",
     "uuid": "8.3.2",
     "virtualbox-soap": "4.0.0"
@@ -32,6 +34,7 @@
     "@microsoft/api-extractor": "7.18.7",
     "@rollup/plugin-typescript": "8.2.5",
     "@types/pngjs": "6.0.1",
+    "@types/qrcode": "1.4.1",
     "@types/stream-json": "1.7.1",
     "@types/uuid": "8.3.1",
     "jest": "27.1.1",
