--- a/components/assistive-webdriver/package.json
+++ b/components/assistive-webdriver/package.json
@@ -42,11 +42,11 @@
     "uuid": "8.3.2",
     "vm-providers": "workspace:*",
     "winston": "3.3.3",
-    "ws": "8.2.0",
+    "ws": "8.2.2",
     "yargs": "17.1.1"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.18.6",
+    "@microsoft/api-extractor": "7.18.7",
     "@rollup/plugin-typescript": "8.2.5",
     "@sinonjs/fake-timers": "7.1.2",
     "@types/co-body": "6.1.0",
@@ -61,14 +61,14 @@
     "@types/uuid": "8.3.1",
     "@types/ws": "7.4.7",
     "@types/yargs": "17.0.2",
-    "jest": "27.0.6",
-    "json-schema-to-typescript": "10.1.4",
+    "jest": "27.1.1",
+    "json-schema-to-typescript": "10.1.5",
     "pngjs": "6.0.0",
     "rimraf": "3.0.2",
     "rollup": "2.56.3",
-    "selenium-webdriver": "4.0.0-beta.4",
+    "selenium-webdriver": "4.0.0-rc-1",
     "tslib": "2.3.1",
-    "typescript": "4.3.5"
+    "typescript": "4.4.3"
   },
   "peerDependencies": {
     "selenium-webdriver": "*"
