Adding Jaws and tcp-web-listener to the vagrant vm

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,26 +77,46 @@ jobs:
         with:
           timeout_minutes: 45
           max_attempts: 3
-          command: cd ./vagrant/win10-chromium-nvda && ./createVM.sh --destroy-existing
+          command: cd ./vagrant/win10-chromium-nvda && ./createVM.sh
       - run: vboxwebsrv -v -A null --logfile vboxwebsrv.log &
       - uses: nick-invision/retry@v2
-        name: "test assistive-playwright"
+        name: "test assistive-playwright (nvda, chromium)"
         with:
           timeout_minutes: 30
           max_attempts: 3
           command: |
             export VM_SETTINGS="$(node -e 'console.log(JSON.stringify(require("./vagrant/win10-chromium-nvda/vm-config.json").nvda.vmSettings))')" &&
-            pnpm nyc-apw-tester -- -l debug -k Insert --vm-settings '$VM_SETTINGS'
+            . ./vagrant/win10-chromium-nvda/vm-skip-keys.sh &&
+            pnpm nyc-apw-tester -- -l debug -k $NVDA_SKIP_KEYS --vm-settings '$VM_SETTINGS'
+      - uses: nick-invision/retry@v2
+        name: "test assistive-playwright (jaws, chromium)"
+        with:
+          timeout_minutes: 30
+          max_attempts: 3
+          command: |
+            export VM_SETTINGS="$(node -e 'console.log(JSON.stringify(require("./vagrant/win10-chromium-nvda/vm-config.json").jaws.vmSettings))')" &&
+            . ./vagrant/win10-chromium-nvda/vm-skip-keys.sh &&
+            pnpm nyc-apw-tester -- -l debug -k $JAWS_SKIP_KEYS --vm-settings '$VM_SETTINGS'
       - run: |
           pnpm nyc-awd-server -- -l debug -c ./vagrant/win10-chromium-nvda/vm-config.json --pid-file assistive-webdriver.pid &> assistive-webdriver.log &
           while ! nc -z 127.0.0.1 3000; do sleep 1; done
         name: "Start assistive-webdriver server"
       - uses: nick-invision/retry@v2
-        name: "test assistive-webdriver"
+        name: "test assistive-webdriver (nvda, chromium)"
         with:
           timeout_minutes: 30
           max_attempts: 3
-          command: pnpm nyc-awd-tester -- -m nvda -k Insert -l debug
+          command: |
+            . ./vagrant/win10-chromium-nvda/vm-skip-keys.sh &&
+            pnpm nyc-awd-tester -- -m nvda -k $NVDA_SKIP_KEYS -l debug
+      - uses: nick-invision/retry@v2
+        name: "test assistive-webdriver (jaws, chromium)"
+        with:
+          timeout_minutes: 30
+          max_attempts: 3
+          command: |
+            . ./vagrant/win10-chromium-nvda/vm-skip-keys.sh &&
+            pnpm nyc-awd-tester -- -m jaws -k $JAWS_SKIP_KEYS -l debug
       - run: |
           ASSISTIVE_WEBDRIVER_PID=$(cat ./assistive-webdriver.pid)
           echo "Sending SIGINT to $ASSISTIVE_WEBDRIVER_PID"
