--- a/vagrant/win10-chromium-nvda/Vagrantfile
+++ b/vagrant/win10-chromium-nvda/Vagrantfile
@@ -14,7 +14,6 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "setup",
     type: "shell",
-    reboot: true,
     inline: <<-SHELL
       \$ErrorActionPreference = "Stop"
       netsh advfirewall firewall add rule name="Allow WinRM" localport=5985 protocol=tcp dir=in action=allow
@@ -26,11 +25,11 @@ Vagrant.configure("2") do |config|
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Policies\\System' -Name EnableLUA -Type DWord -Value 0
 
       echo "Disabling Cortana..."
-      New-Item -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows' -Name 'Windows Search' -Force | Out-Null
+      New-Item -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\Windows Search' -Force | Out-Null
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\Windows Search' -Name AllowCortana -Type DWord -Value 0
 
       echo "Disabling Windows Update..."
-      New-Item -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\WindowsUpdate' -Name AU -Force | Out-Null
+      New-Item -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\WindowsUpdate\\AU' -Force | Out-Null
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\WindowsUpdate\\AU' -Name NoAutoUpdate -Type DWord -Value 1
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\WindowsUpdate\\AU' -Name AUOptions -Type DWord -Value 1
       Set-Service -Name wuauserv -StartupType Disabled
@@ -64,7 +63,7 @@ namespace Win32Api
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows NT\\CurrentVersion\\NetworkList\\DefaultMediaCost' -Name 4G -Type DWord -Value 2
 
       echo "Disabling notifications..."
-      New-Item -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows' -Name Explorer -Force | Out-Null
+      New-Item -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\Explorer' -Force | Out-Null
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Windows\\Explorer' -Name DisableNotificationCenter -Type DWord -Value 1
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Policies\\Explorer' -Name NoTrayItemsDisplay -Type DWord -Value 1
 
@@ -87,38 +86,51 @@ namespace Win32Api
       \$p = Start-Process -FilePath C:\\VC_redist.x64.exe -ArgumentList "/install","/quiet","/norestart" -Wait -NoNewWindow -PassThru
       if ( \$p.ExitCode -ne 0 ) { exit \$p.ExitCode }
 
+      echo "Installing node.js..."
+      \$p = Start-Process msiexec.exe -ArgumentList "/I","c:\\vagrant\\software\\node.msi","/quiet" -Wait -NoNewWindow -PassThru
+      if ( \$p.ExitCode -ne 0 ) { exit \$p.ExitCode }
+      netsh advfirewall firewall add rule name="Allow nodejs" dir=in action=allow program="c:\\Program Files\\nodejs\\node.exe" enable=yes
+
+      echo "Installing assistive-playwright-server, tcp-web-listener and text-to-socket-engine..."
+      \$p = Start-Process -FilePath "c:\\Program Files\\nodejs\\npm.cmd" -ArgumentList "install","--scripts-prepend-node-path=true","-g","c:\\vagrant\\win10-chromium-nvda-vm-0.0.0.tgz" -Wait -NoNewWindow -PassThru
+      if ( \$p.ExitCode -ne 0 ) { exit \$p.ExitCode }
+      \$curPath = Get-ItemPropertyValue -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH
+      Set-ItemProperty -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH -Type ExpandString -Value "\$curPath;c:\\Users\\IEUser\\AppData\\Roaming\\npm\\node_modules\\win10-chromium-nvda-vm\\node_modules\\.bin"
+      \$p = Start-Process -FilePath "c:\\Users\\IEUser\\AppData\\Roaming\\npm\\node_modules\\win10-chromium-nvda-vm\\node_modules\\.bin\\text-to-socket-engine-register.cmd" -Wait -NoNewWindow -PassThru
+      if ( \$p.ExitCode -ne 0 ) { exit \$p.ExitCode }
+
+      echo "Installing java..."
+      Expand-Archive -Path C:\\vagrant\\software\\openjdk.zip -DestinationPath C:\\
+
+      echo "Installing selenium-server..."
+      Copy-Item "C:\\vagrant\\software\\selenium-server.jar" -Destination C:\\
+      netsh advfirewall firewall add rule name="Allow selenium" localport=4444 protocol=tcp dir=in action=allow
+      New-Item -Path 'C:\\webdrivers' -ItemType "directory" -Force | Out-Null
+      \$curPath = Get-ItemPropertyValue -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH
+      Set-ItemProperty -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH -Type ExpandString -Value "\$curPath;c:\\webdrivers"
+
+      echo "Installing chromium..."
+      Expand-Archive -Path C:\\vagrant\\software\\chrome.zip -DestinationPath C:\\
+      Expand-Archive -Path C:\\vagrant\\software\\chromedriver.zip -DestinationPath "C:\\"
+      \$curPath = Get-ItemPropertyValue -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH
+      Set-ItemProperty -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH -Type ExpandString -Value "\$curPath;c:\\chromedriver_win32;c:\\chrome-win"
+
+      echo "Configuring IE 11"
+      New-Item -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Internet Explorer\\Main' -Force | Out-Null
+      Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Policies\\Microsoft\\Internet Explorer\\Main' -Name DisableFirstRunCustomize -Type DWord -Value 1
+      Expand-Archive -Path "C:\\vagrant\\software\\iedriver.zip" -DestinationPath "C:\\webdrivers\\"
+
       echo "Installing nvda..."
       \$p = Start-Process -FilePath C:\\vagrant\\software\\nvda.exe -ArgumentList "--install-silent","--minimal","--log-level=20","--log-file=C:\\NVDA.log","--enable-start-on-logon=False" -Wait -NoNewWindow -PassThru
       if ( \$p.ExitCode -ne 0 ) { exit \$p.ExitCode }
       New-Item -Path 'C:\\Users\\IEUser\\AppData\\Roaming\\nvda' -ItemType "directory" -Force | Out-Null
       Copy-Item "C:\\vagrant\\nvda.ini" -Destination "C:\\Users\\IEUser\\AppData\\Roaming\\nvda\\"
 
-      echo "Installing java..."
-      Expand-Archive -Path C:\\vagrant\\software\\openjdk.zip -DestinationPath C:\\
-
-      echo "Installing chromium..."
-      Expand-Archive -Path C:\\vagrant\\software\\chrome.zip -DestinationPath C:\\
-      Expand-Archive -Path C:\\vagrant\\software\\chromedriver.zip -DestinationPath C:\\
-
-      echo "Installing selenium-server..."
-      Copy-Item "C:\\vagrant\\software\\selenium-server.jar" -Destination C:\\
-      netsh advfirewall firewall add rule name="Allow selenium" localport=4444 protocol=tcp dir=in action=allow
-
-      echo "Installing node.js..."
-      Expand-Archive -Path C:\\vagrant\\software\\node.zip -DestinationPath C:\\
-      netsh advfirewall firewall add rule name="Allow nodejs" dir=in action=allow program="c:\\node-v14.17.6-win-x64\\node.exe" enable=yes
-
-      echo "Installing assistive-playwright-server and text-to-socket-engine..."
-      \$p = Start-Process -FilePath c:\\node-v14.17.6-win-x64\\npm.cmd -ArgumentList "install","--scripts-prepend-node-path=true","-g","c:\\vagrant\\win10-chromium-nvda-vm-0.0.0.tgz" -Wait -NoNewWindow -PassThru
+      echo "Installing jaws..."
+      \$p = Start-Process -FilePath "C:\\vagrant\\software\\jaws.exe" -ArgumentList "/Type","Silent" -Wait -NoNewWindow -PassThru
       if ( \$p.ExitCode -ne 0 ) { exit \$p.ExitCode }
-      \$p = Start-Process -FilePath c:\\node-v14.17.6-win-x64\\node_modules\\win10-chromium-nvda-vm\\node_modules\\.bin\\text-to-socket-engine-register.cmd -Wait -NoNewWindow -PassThru
-      if ( \$p.ExitCode -ne 0 ) { exit \$p.ExitCode }
-
-      echo "Configuring startup and environment..."
-      Copy-Item "C:\\vagrant\\start.cmd" -Destination C:\\
-      Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Run' -Name StartCmd -Type String -Value 'c:\\start.cmd'
-      \$curPath = Get-ItemPropertyValue -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH
-      Set-ItemProperty -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH -Type ExpandString -Value "\$curPath;c:\\node-v14.17.6-win-x64;c:\\chromedriver_win32;c:\\chrome-win"
+      New-Item -Path "C:\\Users\\IEUser\\AppData\\Roaming\\Freedom Scientific\\JAWS\\2021\\Settings\\enu" -ItemType "directory" -Force | Out-Null
+      Copy-Item -Path "C:\\vagrant\\Jaws\\*" -Destination "C:\\Users\\IEUser\\AppData\\Roaming\\Freedom Scientific\\JAWS\\2021\\Settings\\enu\\"
 
       echo "Setup finished successfully!"
   SHELL
