Switching the CI build back to macos-10.15
The "macos-11" image which is becoming "macos-latest" does not include virtualbox/vagrant yet.
cf https://github.com/actions/virtual-environments/issues/4060 and https://github.com/actions/virtual-environments/pull/4010

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           name: text-to-socket-engine-${{ matrix.arch }}
           path: components/text-to-socket-engine/TextToSocketEngine-${{ matrix.arch }}.dll
   build-js:
-    runs-on: macos-latest
+    runs-on: macos-10.15
     needs:
       - build-text-to-socket-engine
     strategy:
