Enabling host dns resolution in Virtualbox

--- a/vagrant/win10-chromium-nvda/Vagrantfile
+++ b/vagrant/win10-chromium-nvda/Vagrantfile
@@ -10,6 +10,8 @@ Vagrant.configure("2") do |config|
     v.customize ["modifyvm", :id, "--vram", "64"]
     v.customize ["setextradata", :id, "GUI/MaxGuestResolution", "any"]
     v.customize ["modifyvm", :id, "--audio", "null", "--audioout", "on", "--audiocontroller", "hda"]
+    # https://www.virtualbox.org/manual/ch09.html#nat_host_resolver_proxy :
+    v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
   end
 
   config.vm.provision "setup",
